--- a/index.html
+++ b/index.html
@@ -5,6 +5,6 @@
     <title>chat gpt</title>
 </head>
 <body>
-    <a href="https://chat-shared3.zhile.io/shared.html?v=2">进入</a>
+    <a style="display: block; text-align: center;" href="https://sharedchat.cn/">进入</a>
 </body>
 </html>
